--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,344 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  font-size: 62.5%;
+}
+h1 {
+  font-size: 4rem;
+}
+h3 {
+  font-size: 2.5rem;
+}
+.font-class {
+  color: black;
+  font-size: 1.6rem;
+  text-align: left;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+}
+.container {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+}
+.header {
+  display: flex;
+  justify-content: flex-end;
+  margin: 15px 3% 20px 0;
+}
+.header nav a {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  font-size: 2rem;
+  color: black;
+  margin: 0 20px 0 20px;
+}
+@media (max-width: 800px) {
+  .header {
+    display: flex;
+    justify-content: center;
+    margin: 15px 3% 20px 0;
+  }
+  .header nav a {
+    text-decoration: none;
+    font-size: 2rem;
+    color: black;
+    margin: 0 20px 0 20px;
+  }
+}
+.top-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  background: #E0E0E0;
+  width: 90%;
+  margin: 20px 0 20px 5%;
+  border-radius: 4px;
+}
+.top-section #portrait {
+  width: 300px;
+  margin: 10px 0 10px 5%;
+}
+@media (max-width: 500px) {
+  .top-section #portrait {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.top-section-div {
+  margin-left: 5%;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
+#h1 {
+  margin: 15px 0 20px 0;
+}
+#h3 {
+  margin: 15px 0 20px 0;
+}
+#p {
+  color: black;
+  font-size: 1.6rem;
+  text-align: left;
+  margin: 20px 0;
+}
+hr {
+  margin: 0 5% 0 0;
+}
+button {
+  background-color: #A9A9A9;
+  border: 1px solid white;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.6rem;
+  cursor: pointer;
+  width: 180px;
+  border-radius: 2px;
+  margin: 5px 0 40px 5%;
+}
+button:hover {
+  background-color: #4CAF50;
+  /* Green */
+  color: white;
+}
+.middle-section {
+  display: flex;
+  width: 100%;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  margin: 10px 0 10px 0;
+}
+@media (max-width: 500px) {
+  .middle-section {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.div-box {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0 5%;
+  width: 50%;
+}
+.div-box p {
+  color: black;
+  font-size: 1.6rem;
+  text-align: left;
+  margin: 10px 0 10px 0;
+  line-height: 2;
+}
+@media (max-width: 500px) {
+  .div-box {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 0 5%;
+    margin-top: 10px;
+    width: 90%;
+  }
+}
+.table1 {
+  width: 88%;
+  font-size: 1.6rem;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border: 1px solid #000;
+  line-height: 2.5;
+  border-collapse: collapse;
+  margin: 15px 0 0 0;
+}
+.table1 th {
+  color: #000;
+  vertical-align: middle;
+  text-align: left;
+  border: 1px solid #000;
+}
+@media (max-width: 500px) {
+  .table1 {
+    width: 100%;
+    margin: 25px 0 22px 0;
+  }
+}
+.bottom-section {
+  margin: 0 0 0 5%;
+}
+#table2 {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+  margin: 20px 0 0 0;
+  font-size: 1.6rem;
+}
+#table2 th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  color: black;
+}
+#table2 tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+#table2 td,
+#table2 th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+footer {
+  display: flex;
+  justify-content: flex-left;
+  align-items: left;
+  background: #888888;
+  margin: 30px 5% 15px 5%;
+}
+footer address {
+  color: black;
+  font-size: 1.6rem;
+  text-align: left;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  color: white;
+  margin: 10px 0 10px 2%;
+}
+@media (max-width: 500px) {
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #888888;
+    margin: 30px 5% 15px 5%;
+  }
+}
