--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,248 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	font-size: 62.5%;
 }
 
+h1 {
+	font-size: 4rem;
+}
+
+h3 {
+	font-size: 2.5rem;
+}
+
+
+// variables
+
+@leftmargin: 0 0 0 5%;
+@tbmargin: 10px 0 10px 0;
+@tbdivmargin: 15px 0 20px 0;
+@font: "Trebuchet MS", Arial, Helvetica, sans-serif;
+
+
+//Mixins
+
+.font-class {
+	color: black;
+	font-size: 1.6rem;
+	text-align: left;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+}
+
+
+//code below 
+
+
+.container {
+	max-width: 960px;
+	width: 100%;
+	margin: 0 auto;
+}
+
+.header {
+	display: flex;
+	justify-content: flex-end;
+	margin: 15px 3% 20px 0;
+
+	nav a {
+		font-family: @font;
+		text-decoration: none;
+		font-size: 2rem;			
+		color: black;
+		margin: 0 20px 0 20px;
+	}
+}
+
+@media (max-width: 800px){
+	.header {
+		display: flex;
+		justify-content: center;
+		margin: 15px 3% 20px 0;
+	
+		nav a {
+			text-decoration: none;
+			font-size: 2rem;			
+			color: black;
+			margin: 0 20px 0 20px;
+		}
+	}
+}
+
+.top-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: left;
+	font-family: @font;
+	background:#E0E0E0;
+	width: 90%;
+	margin: 20px 0 20px 5%;
+	border-radius: 4px;
+
+	#portrait {
+		width: 300px;
+		margin: 10px 0 10px 5%;
+
+		@media (max-width: 500px){
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+}
+
+.top-section-div {
+	margin-left: 5%;
+	font-family: @font;	
+}
+
+#h1 {
+	margin: @tbdivmargin;
+}
+
+#h3 {
+	margin: @tbdivmargin;
+}
+
+#p {
+	.font-class();
+	margin: 20px 0;	
+}
+
+hr {
+	margin: 0 5% 0 0;
+}
+
+
+button {
+	background-color:#A9A9A9;
+	border: 1px solid white;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 1.6rem;
+	cursor: pointer;
+	width: 180px;
+	border-radius: 2px;
+	margin: 5px 0 40px 5%;
+
+	&:hover {
+		background-color: #4CAF50; /* Green */
+		color: white;
+	}
+}
+
+.middle-section {
+	display: flex;
+	width: 100%;
+	font-family: @font;	
+	margin: @tbmargin;
+
+	@media (max-width: 500px){
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.div-box {
+	.column();
+	margin: @leftmargin;  
+	width: 50%;
+
+	p {
+		.font-class();
+		margin: @tbmargin;
+		line-height: 2;
+	}
+}
+
+@media (max-width: 500px){
+	.div-box {
+		.column();
+		margin: @leftmargin; 
+		margin-top: 10px; 
+		width: 90%;	
+	}
+}
+
+.table1 {
+    width:88%;
+	font-size:1.6rem;
+	font-family: @font;	
+    border:1px solid #000;
+    line-height: 2.5;
+	border-collapse:collapse; 
+	margin: 15px 0 0 0;
+
+	th {
+		color:#000; 
+		vertical-align:middle;
+		text-align:left;
+		border:1px solid #000; 
+	}
+}
+
+@media (max-width: 500px){
+	.table1 {
+		width: 100%;
+		margin: 25px 0 22px 0;
+	}
+}
+
+.bottom-section {
+	margin: @leftmargin;
+}
+
+#table2 {
+	font-family: @font;
+	border-collapse: collapse;
+	width: 95%;
+	margin: 20px 0 0 0;
+	font-size: 1.6rem;
+}
+
+#table2 th {
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: left;
+	color: black;
+  }
+
+  #table2 tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #table2 td, #table2 th {
+	border: 1px solid #ddd;
+	padding: 8px;
+  }
+
+footer {
+	display: flex;
+	justify-content: flex-left;
+	align-items: left;
+	background: #888888;
+	margin: 30px 5% 15px 5%;
+
+	address {
+		.font-class();
+		font-family: @font;	
+		color: white;
+		margin: 10px 0 10px 2%;
+	}
+}
+
+@media (max-width:500px){
+	footer {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background: #888888;
+		margin: 30px 5% 15px 5%;
+	}
+}
