--- a/less/index.less
+++ b/less/index.less
@@ -123,21 +123,6 @@ h3 {
 	}
 }
 
-@media (max-width: 800px){
-	.header {
-		display: flex;
-		justify-content: center;
-		margin: 15px 3% 20px 0;
-	
-		nav a {
-			text-decoration: none;
-			font-size: 2rem;			
-			color: black;
-			margin: 0 20px 0 20px;
-		}
-	}
-}
-
 .top-section {
 	display: flex;
 	flex-direction: column;
@@ -150,9 +135,9 @@ h3 {
 
 	#portrait {
 		width: 300px;
-		margin: 10px 0 10px 5%;
+		margin: 20px 0 10px 5%;
 
-		@media (max-width: 500px){
+		@media (max-width: 800px){
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
@@ -167,15 +152,18 @@ h3 {
 	h1 {
 		margin: @tbdivmargin;
 	}
+
 	h3 {
 		margin: @tbdivmargin;
 	}
+
 	p {
 		.font-class();
-			margin: 20px 0;	
+		margin: 20px 0;	
 	}
+
 	hr {
-	margin: 0 5% 0 0;
+		margin: 0 5% 0 0;
 	}
 }
 
@@ -222,13 +210,13 @@ button {
 		margin-top: 10px; 
 		width: 90%;	
 	}
+
 	p {
 		.font-class();
 		margin: @tbmargin;
 		line-height: 2;
 	}
 }
-
 
 .table1 {
     width:88%;
@@ -252,6 +240,8 @@ button {
 	}
 }
 
+//can't figure out how to nest this table fully
+
 .bottom-section {
 	margin: @leftmargin;
 }
@@ -262,23 +252,22 @@ button {
 	width: 95%;
 	margin: 20px 0 0 0;
 	font-size: 1.6rem;
+
+	th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		color: black;
+
+	}
 }
-	
-#table2 th {
-	padding-top: 12px;
-	padding-bottom: 12px;
-	text-align: left;
-	color: black;
-}
-	
+
 #table2 tr:nth-child(even){background-color: #f2f2f2;}
-	  
+
 #table2 td, #table2 th {
 	border: 1px solid #ddd;
 	padding: 8px;
 }
-
-
 
 footer {
 	display: flex;
